Adjusting the sizes a bit. 252 correlates to the other un-merged size change for SimplePicker Whitespace corrections.

--- a/css/Calendar.less
+++ b/css/Calendar.less
@@ -12,7 +12,7 @@
 		display: inline-block;
     }
 	.moon-simple-picker {
-		max-width: 240px;
+		max-width: 252px;
 
 		.moon-simple-picker-client > * {
 			color: @moon-spotlight-text-color;
@@ -78,7 +78,7 @@
 	}
 
 	&.moon-calendar-picker-date-shadow {
-		color: @moon-calendar-picker-date-shadow-color;   
+		color: @moon-calendar-picker-date-shadow-color;
 
 		&.spotlight {
 			color: @moon-spotlight-text-color;
